// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterDropdown component should render 1`] = `
<Dropdown
  className="ins-c-filter__dropdown"
  isOpen={false}
  ouiaId="OUIA-Generated-RHI/FilterDropdown-1"
  ouiaSafe={true}
  toggle={
    <DropdownToggle
      onToggle={[Function]}
      ouiaId="OUIA-Generated-RHI/FilterDropdown-1"
      ouiaSafe={true}
    >
      Filters
    </DropdownToggle>
  }
>
  <div
    className="pf-c-dropdown__menu-item"
  >
    <Level
      key="0"
    >
      <FilterInput
        addRemoveFilters={[Function]}
        aria-label=""
        className={null}
        currentPage={null}
        filters={Object {}}
        id="0"
        key="check00"
        label=""
        param=""
        type=""
        value=""
      />
    </Level>
  </div>
</Dropdown>
`;

exports[`FilterDropdown component should render with a component as label 1`] = `
<Dropdown
  className="ins-c-filter__dropdown"
  isOpen={false}
  ouiaId="OUIA-Generated-RHI/FilterDropdown-2"
  ouiaSafe={true}
  toggle={
    <DropdownToggle
      onToggle={[Function]}
      ouiaId="OUIA-Generated-RHI/FilterDropdown-2"
      ouiaSafe={true}
    >
      <React.Fragment />
    </DropdownToggle>
  }
>
  <div
    className="pf-c-dropdown__menu-item"
  >
    <Level
      key="0"
    >
      <FilterInput
        addRemoveFilters={[Function]}
        aria-label=""
        className={null}
        currentPage={null}
        filters={Object {}}
        id="0"
        key="check00"
        label=""
        param=""
        type=""
        value=""
      />
    </Level>
  </div>
</Dropdown>
`;
